# logscollector

jsonrpc/: Cargo.toml
jsonrpc/src/: data.rs  handlers.rs  lib.rs
server/: Cargo.toml
server/src/: main.rs
server/src/handlers/: inserter.rs  mod.rs  record.rs  seek.rs
