[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-rt = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "*"
async-trait = "*"
sled = "*"
uuid = { version = "*", features = ["v4"] }
jsonrpc = { path = "../jsonrpc" }